# nfl-player-projections

./: .coverage.Bens-MBP_lan.pid43847.X9sgnMUx.HNQIp837rWOh  .env.example  .gitignore  AUDIT_REPORT.md  CLAUDE.md  CRITICAL_LIMITATION.md  DATA_LEAKAGE_REPORT.md  DIRECTIVE_V7_EVALUATION.md  IMPROVEMENTS.md  LIMITATIONS.md  README.md  REPO_SCORE.md  app.js  claude_council.md  council-report-20260331-021213.html  council-report-20260331-025327.html  council-report-20260401-134928.html  council-transcript-20260331-021213.md  council-transcript-20260331-025327.md  council-transcript-20260401-134928.md  council-transcript-20260414-034617.md  council-transcript-20260422-032550.md  council-transcript-20260423-051434.md  council-transcript-20260501-020711.md  index.html  pyproject.toml  pytest.ini  requirements.txt
_site/: app.js  index.html  style.css  template.html
api/: main.py
config/: settings.py
data/: advanced_model_results.json  audit_2025_backtest_report.json  combine_data.parquet  data_availability_cache.json  draft_model_metadata.json  draft_picks.parquet  injuries.parquet  manual_adjustments_2026.json  model_performance.json  players_QB.json  players_RB.json  players_TE.json  players_WR.json  rookie_priors.json  schedule_impact.json  utilization_percentile_bounds.json
docs/: ACTIVE_ROSTER_FILTER.md  ALPHA_SWEEP_20260419.md  ARCHITECTURE.md  BACKTESTING.md  BIAS_ATTRIBUTION_20260414.md  BOOTSTRAP_H2H_20260422.md  CAUSAL_FEATURES_AUDIT_20260424.md  CONFLICT_RESOLUTION.md  CONTINUOUS_MARGIN_AUDIT_20260425.md  DATA_GAPS_STATUS_20260425.md  DATA_INGESTION_ROADMAP.md  DATA_LINEAGE.md  DECISION_OBJECTIVES.md  GAP_ANALYSIS.md  INACTIVE_PICK_GAP_DIAGNOSIS.md  OPERATING_SUMMARY.md  PAPER_TRADE_PROTOCOL_20260422.md  PHASE_1_VEGAS_FINDINGS.md  PHASE_2_OPPONENT_DEFENSE_FINDINGS.md  PHASE_3_INJURY_FINDINGS.md  PHASE_4A_CONFORMAL_FINDINGS.md  PHASE_4B_VORP_FINDINGS.md  PHASE_4C_ROOKIE_PRIORS_FINDINGS.md  PHASE_4D_INJURY_VARIANCE_FINDINGS.md  PHASE_4E_PRESEASON_DRAFT_FINDINGS.md  PHASE_4_ENSEMBLE_FINDINGS.md  PHASE_4_PREREGISTRATION.md  POSITION_CLASSIFICATION_AUDIT.md  PREDICTIVE_CEILING_PLAN.md  PREREGISTRATION_2026_W1_W4.md  PROBLEM_DEFINITION.md  PRODUCTION_READINESS_20260502.md  PROSPECTIVE_REPLAY_20260422.md  RUNBOOK.md  SILENT_FALLBACK_AUDIT_20260422.md  STAT_SIG_AUDIT_4SEASON_20260425.md  STAT_SIG_AUDIT_8SEASON_20260425.md  SYMMETRIC_PROSPECTIVE_REPLAY.md  SYMMETRIC_WALK_FORWARD_PINNED.md  USER_INTERVIEW_PROTOCOL.md  (+4 more)
(+453 files in other folders)
