[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfl-player-projections"
version = "1.0.0"
description = "NFL player fantasy performance prediction system"
requires-python = ">=3.10"
dependencies = [
    # Data collection and processing
    "requests>=2.31.0",
    "certifi>=2023.11.17",
    "beautifulsoup4>=4.12.3",
    "pandas==2.1.4",
    "numpy==1.26.3",
    "lxml>=5.1.0",
    # Machine learning
    "scikit-learn==1.4.0",
    "xgboost==2.0.3",
    "lightgbm==4.3.0",
    "optuna>=3.5.0",
    "statsmodels>=0.14.0",
    "scipy>=1.11.0",
    # Data storage
    "sqlalchemy>=2.0.25",
    # Utilities
    "python-dateutil>=2.8.2",
    "tqdm>=4.66.1",
    "joblib>=1.3.2",
    # API for serving predictions
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "gunicorn>=21.2.0",
    # Visualization
    "matplotlib>=3.8.2",
    "seaborn>=0.13.1",
    # Web application
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    # NFL data source
    "nfl-data-py>=0.3.0",
    "prompts_0 @ git+ssh://git@github.com/bsr-0/prompts_0.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
torch = [
    "torch>=2.1.0",
    "shap>=0.43.0",
]

[tool.setuptools.packages.find]
include = ["src*", "config*", "api*"]

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    "ignore:A NumPy version >=.*required for this version of SciPy.*:UserWarning",
    "ignore:Trying to unpickle estimator .* from version .*:UserWarning",
    "ignore:.*If you are loading a serialized model.*XGBoost.*:UserWarning",
    "ignore:Mean of empty slice:RuntimeWarning",
]
